--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,107 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+alabaster==0.7.12
+appnope==0.1.2
+argon2-cffi==20.1.0
+async-generator==1.10
+attrs==20.3.0
+awscli==1.19.22
+Babel==2.9.0
+backcall==0.2.0
+bleach==3.3.0
+botocore==1.20.22
+Brotli==1.0.9
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+click==7.1.2
+colorama==0.4.3
+coloredlogs==15.0
+colorlover==0.3.0
+coverage==5.5
+cufflinks==0.17.3
+dash==1.19.0
+dash-core-components==1.15.0
+dash-html-components==1.1.2
+dash-renderer==1.9.0
+dash-table==4.11.2
+decorator==4.4.2
+defusedxml==0.7.1
+docutils==0.15.2
+entrypoints==0.3
+flake8==3.8.4
+Flask==1.1.2
+Flask-Compress==1.9.0
+future==0.18.2
+humanfriendly==9.1
+idna==2.10
+imagesize==1.2.0
+importlib-metadata==3.7.2
+ipykernel==5.5.0
+ipython==7.16.1
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+itsdangerous==1.1.0
+jedi==0.18.0
+Jinja2==2.11.3
+jmespath==0.10.0
+jsonschema==3.2.0
+jupyter-client==6.1.11
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+MarkupSafe==1.1.1
+mccabe==0.6.1
+mistune==0.8.4
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.2
+nest-asyncio==1.5.1
+notebook==6.2.0
+numpy==1.19.5
+packaging==20.9
+pandas==1.1.5
+pandocfilters==1.4.3
+parso==0.8.1
+pexpect==4.8.0
+pickleshare==0.7.5
+plotly==4.14.3
+prometheus-client==0.9.0
+prompt-toolkit==3.0.16
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pycodestyle==2.6.0
+pycparser==2.20
+pyflakes==2.2.0
+Pygments==2.8.1
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+python-dotenv==0.15.0
+pytz==2021.1
+PyYAML==5.4.1
+pyzmq==22.0.3
+requests==2.25.1
+retrying==1.3.3
+rsa==4.7.2
+s3transfer==0.3.4
+Send2Trash==1.5.0
+six==1.15.0
+snowballstemmer==2.1.0
+Sphinx==3.5.2
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+-e git+https://github.com/parker84/toronto-crime.git@ad60c62a2f254c3b9eae245d913b459d60639b95#egg=src
+terminado==0.9.2
+testpath==0.4.4
+tornado==6.1
+traitlets==4.3.3
+typing-extensions==3.7.4.3
+urllib3==1.26.3
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==1.0.1
+widgetsnbextension==3.5.1
+zipp==3.4.1
