--- a/.gitignore
+++ b/.gitignore
@@ -76,7 +76,7 @@ target/
 .ipynb_checkpoints/
 
 # exclude data from source control by default
-/data/
+# /data/
 
 # Mac OS-specific storage files
 .DS_Store
@@ -91,6 +91,6 @@ target/
 /docs/personal/
 /src/visualization/rough/
 *.ipynb
-*.csv
-*.json
+# *.csv
+# *.json
 /venv/
