--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,7 @@ pickleshare==0.7.5
 plotly==4.14.3
 prometheus-client==0.9.0
 prompt-toolkit==3.0.16
+psycopg2==2.8.6
 ptyprocess==0.7.0
 pyasn1==0.4.8
 pycodestyle==2.6.0
@@ -75,6 +76,7 @@ Pygments==2.8.1
 pyparsing==2.4.7
 pyrsistent==0.17.3
 python-dateutil==2.8.1
+python-decouple==3.4
 python-dotenv==0.15.0
 pytz==2021.1
 PyYAML==5.4.1
@@ -93,7 +95,8 @@ sphinxcontrib-htmlhelp==1.0.3
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
--e git+https://github.com/parker84/toronto-crime.git@ad60c62a2f254c3b9eae245d913b459d60639b95#egg=src
+SQLAlchemy==1.3.23
+-e git+https://github.com/parker84/toronto-crime.git@912511dd5ff9cf40504ed7b276d327898d2074e9#egg=src
 terminado==0.9.2
 testpath==0.4.4
 tornado==6.1
