--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ flake8==3.8.4
 Flask==1.1.2
 Flask-Compress==1.9.0
 future==0.18.2
+gunicorn==20.0.4
 humanfriendly==9.1
 idna==2.10
 imagesize==1.2.0
@@ -96,7 +97,7 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
 SQLAlchemy==1.3.23
--e git+https://github.com/parker84/toronto-crime.git@912511dd5ff9cf40504ed7b276d327898d2074e9#egg=src
+-e git+https://github.com/parker84/toronto-crime.git@94002d2cbd1a2220a41486dcfdc3187d8808a1c5#egg=src
 terminado==0.9.2
 testpath==0.4.4
 tornado==6.1
