--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 alabaster==0.7.12
+altair==4.1.0
 appnope==0.1.2
 argon2-cffi==20.1.0
+astor==0.8.1
 async-generator==1.10
 attrs==20.3.0
 awscli==1.19.22
 Babel==2.9.0
 backcall==0.2.0
+base58==2.1.0
 bleach==3.3.0
+blinker==1.4
 botocore==1.20.22
 Brotli==1.0.9
+cachetools==4.2.1
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
@@ -31,6 +36,8 @@ flake8==3.8.4
 Flask==1.1.2
 Flask-Compress==1.9.0
 future==0.18.2
+gitdb==4.0.5
+GitPython==3.1.14
 gunicorn==20.0.4
 humanfriendly==9.1
 idna==2.10
@@ -64,14 +71,18 @@ pandocfilters==1.4.3
 parso==0.8.1
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==8.1.2
 plotly==4.14.3
 prometheus-client==0.9.0
 prompt-toolkit==3.0.16
+protobuf==3.15.5
 psycopg2==2.8.6
 ptyprocess==0.7.0
+pyarrow==3.0.0
 pyasn1==0.4.8
 pycodestyle==2.6.0
 pycparser==2.20
+pydeck==0.6.1
 pyflakes==2.2.0
 Pygments==2.8.1
 pyparsing==2.4.7
@@ -88,6 +99,7 @@ rsa==4.7.2
 s3transfer==0.3.4
 Send2Trash==1.5.0
 six==1.15.0
+smmap==3.0.5
 snowballstemmer==2.1.0
 Sphinx==3.5.2
 sphinxcontrib-applehelp==1.0.2
@@ -98,12 +110,17 @@ sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
 SQLAlchemy==1.3.23
 -e git+https://github.com/parker84/toronto-crime.git@94002d2cbd1a2220a41486dcfdc3187d8808a1c5#egg=src
+streamlit==0.78.0
 terminado==0.9.2
 testpath==0.4.4
+toml==0.10.2
+toolz==0.11.1
 tornado==6.1
 traitlets==4.3.3
 typing-extensions==3.7.4.3
+tzlocal==2.1
 urllib3==1.26.3
+validators==0.18.2
 wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==1.0.1
