--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ humanfriendly==9.1
 idna==2.10
 imagesize==1.2.0
 importlib-metadata==3.7.2
+ipdb==0.13.6
 ipykernel==5.5.0
 ipython==7.16.1
 ipython-genutils==0.2.0
