--- a/requirements.txt
+++ b/requirements.txt
@@ -53,7 +53,7 @@ importlib-metadata==3.7.2
 install==1.3.4
 ipdb==0.13.6
 ipykernel==5.5.0
-ipython==7.16.1
+ipython==7.21.0
 ipython-genutils==0.2.0
 ipywidgets==7.6.3
 itsdangerous==1.1.0
@@ -93,7 +93,7 @@ plotnine==0.7.1
 prometheus-client==0.9.0
 prompt-toolkit==3.0.16
 protobuf==3.15.5
-psycopg2==2.8.6
+psycopg2-binary==2.8.6
 ptyprocess==0.7.0
 pyarrow==3.0.0
 pyasn1==0.4.8
