--- a/requirements.txt
+++ b/requirements.txt
@@ -53,7 +53,7 @@ importlib-metadata==3.7.2
 install==1.3.4
 ipdb==0.13.6
 ipykernel==5.5.0
-ipython==7.21.0
+# ipython==7.21.0
 ipython-genutils==0.2.0
 ipywidgets==7.6.3
 itsdangerous==1.1.0
