--- a/requirements.txt
+++ b/requirements.txt
@@ -80,7 +80,7 @@ mccabe==0.6.1
 mistune==0.8.4
 mizani==0.7.2
 nbclient==0.5.3
-nbconvert==6.0.7 
+nbconvert==6.0.7
 nbformat==5.1.2
 nest-asyncio==1.5.1
 notebook==6.2.0
@@ -91,11 +91,13 @@ pandas==1.1.5
 pandasql==0.7.3
 pandocfilters==1.4.3
 parso==0.8.1
+pathlib==1.0.1
 patsy==0.5.1
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.1.2
 plotly==4.14.3
+plotly-express==0.4.1
 plotnine==0.7.1
 prometheus-client==0.9.0
 prompt-toolkit==3.0.16
