--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,8 @@ colorama==0.4.3
 coloredlogs==15.0
 colorlover==0.3.0
 coverage==5.5
+cssselect==1.1.0
+cssutils==2.2.0
 cufflinks==0.17.3
 cycler==0.10.0
 Cython==0.29.22
@@ -55,6 +57,7 @@ humanfriendly==9.1
 idna==2.10
 imagesize==1.2.0
 importlib-metadata==3.7.2
+iniconfig==1.1.1
 install==1.3.4
 ipdb==0.13.6
 ipykernel==5.5.0
@@ -74,9 +77,11 @@ jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.0
 kiwisolver==1.3.1
 lazy-object-proxy==1.5.2
+lxml==4.6.3
 MarkupSafe==1.1.1
 matplotlib==3.3.4
 mccabe==0.6.1
+micropython-binascii==0.0.2
 mistune==0.8.4
 mizani==0.7.2
 nbclient==0.5.3
@@ -85,11 +90,13 @@ nbformat==5.1.2
 nest-asyncio==1.5.1
 notebook==6.2.0
 numpy==1.20.1
+oauthlib==3.1.0
 packaging==20.9
 palettable==3.3.0
 pandas==1.1.5
 pandasql==0.7.3
 pandocfilters==1.4.3
+parameterized==0.8.1
 parso==0.8.1
 pathlib==1.0.1
 patsy==0.5.1
@@ -99,21 +106,29 @@ Pillow==8.1.2
 plotly==4.14.3
 plotly-express==0.4.1
 plotnine==0.7.1
+pluggy==0.13.1
+premailer==3.7.0
 prometheus-client==0.9.0
 prompt-toolkit==3.0.16
 protobuf==3.15.5
 psycopg2-binary==2.8.6
 ptyprocess==0.7.0
+py==1.10.0
+pyactiveresource==2.2.2
 pyarrow==3.0.0
 pyasn1==0.4.8
 pycodestyle==2.6.0
 pycparser==2.20
+pycryptodome==3.7.3
 pydeck==0.6.1
 pyflakes==2.2.0
 Pygments==2.8.1
+PyJWT==2.0.1
 pylint==2.7.2
 pyparsing==2.4.7
 pyrsistent==0.17.3
+PySocks==1.7.1
+pytest==6.2.2
 python-dateutil==2.8.1
 python-decouple==3.4
 python-dotenv==0.15.0
@@ -121,12 +136,14 @@ pytz==2021.1
 PyYAML==5.4.1
 pyzmq==22.0.3
 requests==2.25.1
+requests-oauthlib==1.3.0
 retrying==1.3.3
 rsa==4.7.2
 s3transfer==0.3.4
 scikit-learn==0.24.1
 scipy==1.5.4
 Send2Trash==1.5.0
+ShopifyAPI==8.4.0
 six==1.15.0
 smmap==3.0.5
 snowballstemmer==2.1.0
@@ -147,7 +164,9 @@ threadpoolctl==2.1.0
 toml==0.10.2
 toolz==0.11.1
 tornado==6.1
+tqdm==4.59.0
 traitlets==4.3.3
+tweepy==3.10.0
 typing-extensions==3.7.4.3
 tzlocal==2.1
 urllib3==1.26.3
@@ -159,4 +178,5 @@ webencodings==0.5.1
 Werkzeug==1.0.1
 widgetsnbextension==3.5.1
 wrapt==1.12.1
+yagmail==0.14.247
 zipp==3.4.1
