--- a/requirements.txt
+++ b/requirements.txt
@@ -157,6 +157,8 @@ sphinxcontrib-serializinghtml==1.1.4
 SQLAlchemy==1.3.23
 -e git+https://github.com/parker84/toronto-crime.git@94002d2cbd1a2220a41486dcfdc3187d8808a1c5#egg=src
 statsmodels==0.12.2
+streamlit-analytics==0.2.2
+streamlit-metrics==0.1.0
 streamlit==0.78.0
 terminado==0.9.2
 testpath==0.4.4
