--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,7 @@ gitdb==4.0.5
 GitPython==3.1.14
 glyph==2.6.5b0
 gunicorn==20.0.4
-hdbscan==0.8.27
+# hdbscan==0.8.27
 humanfriendly==9.1
 idna==2.10
 imagesize==1.2.0
@@ -155,10 +155,10 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
 SQLAlchemy==1.3.23
--e git+https://github.com/parker84/toronto-crime.git@94002d2cbd1a2220a41486dcfdc3187d8808a1c5#egg=src
+# -e git+https://github.com/parker84/toronto-crime.git@94002d2cbd1a2220a41486dcfdc3187d8808a1c5#egg=src
 statsmodels==0.12.2
-streamlit==1.3.1
-streamlit-analytics==0.2.2
+streamlit==1.14.0
+streamlit-analytics==0.4.1
 streamlit-metrics==0.1.0
 terminado==0.9.2
 testpath==0.4.4
