--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ click==7.1.2
 colorama==0.4.3
 coloredlogs==15.0
 colorlover==0.3.0
+# commonmark==0.9.1
 coverage==5.5
 cssselect==1.1.0
 cssutils==2.2.0
@@ -51,8 +52,14 @@ geopy==2.1.0
 gitdb==4.0.5
 GitPython==3.1.14
 glyph==2.6.5b0
+# google-api-core==2.8.2
+# google-auth==2.11.1
+# google-cloud-core==2.3.2
+# google-cloud-firestore==2.5.0
+# googleapis-common-protos==1.56.4
+# grpcio==1.49.1
+# grpcio-status==1.48.2
 gunicorn==20.0.4
-# hdbscan==0.8.27
 humanfriendly==9.1
 idna==2.10
 imagesize==1.2.0
@@ -61,7 +68,7 @@ iniconfig==1.1.1
 install==1.3.4
 ipdb==0.13.6
 ipykernel==5.5.0
-# ipython==7.21.0
+# ipython==7.34.0
 ipython-genutils==0.2.0
 ipywidgets==7.6.3
 isort==5.7.0
@@ -80,6 +87,7 @@ lazy-object-proxy==1.5.2
 lxml==4.6.3
 MarkupSafe==1.1.1
 matplotlib==3.3.4
+matplotlib-inline==0.1.6
 mccabe==0.6.1
 micropython-binascii==0.0.2
 mistune==0.8.4
@@ -110,13 +118,15 @@ pluggy==0.13.1
 premailer==3.7.0
 prometheus-client==0.9.0
 prompt-toolkit==3.0.16
+proto-plus==1.19.6
 protobuf==3.15.5
 psycopg2-binary==2.8.6
 ptyprocess==0.7.0
 py==1.10.0
 pyactiveresource==2.2.2
-pyarrow==3.0.0
+pyarrow==10.0.0
 pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.6.0
 pycparser==2.20
 pycryptodome==3.7.3
@@ -125,6 +135,7 @@ pyflakes==2.2.0
 Pygments==2.8.1
 PyJWT==2.0.1
 pylint==2.7.2
+Pympler==1.0.1
 pyparsing==2.4.7
 pyrsistent==0.17.3
 PySocks==1.7.1
@@ -138,12 +149,14 @@ pyzmq==22.0.3
 requests==2.25.1
 requests-oauthlib==1.3.0
 retrying==1.3.3
+rich==12.6.0
 rsa==4.7.2
 s3transfer==0.3.4
 scikit-learn==0.24.1
 scipy==1.5.4
+semver==2.13.0
 Send2Trash==1.5.0
-ShopifyAPI==8.4.0
+ShopifyAPI==12.0.1
 six==1.15.0
 smmap==3.0.5
 snowballstemmer==2.1.0
@@ -155,7 +168,6 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
 SQLAlchemy==1.3.23
-# -e git+https://github.com/parker84/toronto-crime.git@94002d2cbd1a2220a41486dcfdc3187d8808a1c5#egg=src
 statsmodels==0.12.2
 streamlit==1.14.0
 streamlit-analytics==0.4.1
@@ -169,7 +181,7 @@ tornado==6.1
 tqdm==4.59.0
 traitlets==4.3.3
 tweepy==3.10.0
-typing-extensions==3.7.4.3
+typing_extensions==4.4.0
 tzlocal==2.1
 urllib3==1.26.3
 validators==0.18.2
@@ -180,5 +192,5 @@ webencodings==0.5.1
 Werkzeug==1.0.1
 widgetsnbextension==3.5.1
 wrapt==1.12.1
-yagmail==0.14.247
+yagmail==0.15.293
 zipp==3.4.1
